--- a/angular-client/src/app/components/reports/reports.component.html
+++ b/angular-client/src/app/components/reports/reports.component.html
@@ -1,24 +1,30 @@
 <mat-grid-list cols="2" rowHeight="2:1">
 
-    <mat-grid-tile *ngIf="this.isUrgencyDataReady.every(fieldTrue)">
-        <mat-card>
-            <mat-card-title>Calls by urgency</mat-card-title>
-            <mat-card-content>
+    <mat-grid-tile *ngIf="isUrgencyStatsReady">
+        <div class="report-container">
+        <!-- <mat-card> -->
+            <div>Calls by urgency</div>
+            <!-- <mat-card-content> -->
                 <div style="width: 50%;">
                     <canvas baseChart [chartType]="'pie'" [datasets]="generateCallerUrgencyChartData()" [labels]="callerUrgencyLabels" [legend]="true">
                     </canvas>
                 </div>
                 <div>
-                    <p>YES: {{this.urgency.get("urgencyYES")}} </p>
-                    <p>NO : {{this.urgency.get("urgencyNO")}} </p>
+                    <p>YES: {{urgency.get("urgencyYES")}} </p>
+                    <p>NO : {{urgency.get("urgencyNO")}} </p>
                     <p>
-                        <b>TOTAL: {{this.urgency.get("urgencyNO")+this.urgency.get("urgencyYES")}} </b>
+                        <b>TOTAL: {{urgency.get("urgencyNO")+urgency.get("urgencyYES")}} </b>
                     </p>
                 </div>
-            </mat-card-content>
-        </mat-card>
+            <!-- </mat-card-content> -->
+        <!-- </mat-card> -->
+    </div>
     </mat-grid-tile>
-    <mat-grid-tile *ngIf="this.isCallerTypeDataReady.every(fieldTrue)">
+    <mat-grid-tile>
+        <mat-grid-tile-header>Calls 2</mat-grid-tile-header>
+
+    </mat-grid-tile>
+    <!-- <mat-grid-tile *ngIf="this.isCallerTypeDataReady.every(fieldTrue)">
         <mat-card>
             <mat-card-title>Calls by caller type</mat-card-title>
             <mat-card-content>
@@ -38,8 +44,8 @@
                 </div>
             </mat-card-content>
         </mat-card>
-    </mat-grid-tile>
-    <mat-grid-tile *ngIf="this.isCallerPronounsDataReady.every(fieldTrue)">
+    </mat-grid-tile> -->
+    <!-- <mat-grid-tile *ngIf="this.isCallerPronounsDataReady.every(fieldTrue)">
         <mat-card>
             <mat-card-title>Calls by caller pronoun</mat-card-title>
             <mat-card-content>
@@ -59,5 +65,5 @@
                 </div>
             </mat-card-content>
         </mat-card>
-    </mat-grid-tile>
+    </mat-grid-tile> -->
 </mat-grid-list>
