Translated initial French dictionary, fixed some issues in several forms #41

--- a/angular-client/src/app/components/participants/add-participant/add-participant.component.html
+++ b/angular-client/src/app/components/participants/add-participant/add-participant.component.html
@@ -3,7 +3,7 @@
   <form [formGroup]="form"  #f="ngForm" (ngSubmit)="onSubmit() && form.reset()" novalidate>
 
     <mat-form-field class="name-input">
-      <input placeholder="Name" matInput formControlName="name">
+      <input placeholder="{{'AddParticipant.Name'|translate}}" matInput formControlName="name">
       <mat-hint align="start">
         {{"AddParticipant.Legal"|translate}}
       </mat-hint>
