--- a/angular-client/src/app/components/participants/view-participants/view-participants.component.html
+++ b/angular-client/src/app/components/participants/view-participants/view-participants.component.html
@@ -26,7 +26,7 @@
         </mat-card-header>
         <mat-card-content>
           <div *ngIf="participant.pronouns !== undefined && participant.pronouns !== ''">
-            <b> {{'ViewParticipants.pronouns'|translate}} </b> {{participant.pronouns}}
+            <b> {{'ViewParticipants.Pronouns'|translate}} </b> {{participant.pronouns}}
             <br>
           </div>
           <div *ngIf="participant.email !== ''">
