Basic future reference commit to add new entries into dictionary, Top Menu #41

--- a/angular-client/src/app/app.component.html
+++ b/angular-client/src/app/app.component.html
@@ -4,13 +4,13 @@
       <button mat-button class="nav-logo">Axiona</button>
     </a>
     <a class="nav-link" routerLink="participants">
-      <button mat-button>Participants</button>
+      <button mat-button>{{'TopMenu.Participants'|translate}}</button>
     </a>
     <a class="nav-link" routerLink="resources">
-      <button mat-button>Resources</button>
+      <button mat-button>{{'TopMenu.Resources'|translate}}</button>
     </a>
     <a class="nav-link" routerLink="dashboard/phonelog">
-      <button mat-button>Phone Log</button>
+      <button mat-button>{{'TopMenu.Phone Log'|translate}}</button>
     </a>
   </span>
   <span class="example-fill-remaining-space"></span>
