Fixed location of delete button #80

--- a/angular-client/src/app/components/users/edit-user/edit-user.component.css
+++ b/angular-client/src/app/components/users/edit-user/edit-user.component.css
@@ -2,10 +2,6 @@
     display: flex;
 }
 
-.form {
-    width: 90%;
-}
-
 .form-container {
     flex: 1;
 }
@@ -17,4 +13,8 @@ mat-form-field {
 .updateErr {
     display: flex;
     margin-bottom: 1rem;
+}
+
+.delete-btn {
+    float: right;
 }
