--- a/angular-client/src/app/components/reports/reports.component.html
+++ b/angular-client/src/app/components/reports/reports.component.html
@@ -1,5 +1,5 @@
 <div class="Axiona-gridlist">
-    <div class="Axiona-gridlist-tile" *ngIf="isPhonelogUrgenciesReady">
+    <div class="Axiona-gridlist-tile" *ngIf="isPhonelogUrgenciesDataReady">
         <mat-card>
             <mat-card-title>Calls by urgency</mat-card-title>
             <mat-card-content>
@@ -41,6 +41,32 @@
                     <p>They/them  : {{phonelogCallerPronouns["they/them"]}} </p>
                     <p>He/him     : {{phonelogCallerPronouns["he/him"]}} </p>
                     <p>TOTAL: {{phonelogCallerPronouns["undisclosed"]+phonelogCallerPronouns["she/her"]+phonelogCallerPronouns["they/them"]+phonelogCallerPronouns["he/him"]}}</p>
+                </div>
+            </mat-card-content>
+        </mat-card>
+    </div>
+    <div class="Axiona-gridlist-tile" *ngIf="isCallerNeedsDataReady">
+        <mat-card>
+            <mat-card-title>Calls by caller need</mat-card-title>
+            <mat-card-content>
+                    <canvas baseChart [chartType]="'pie'" [datasets]="generateCallerNeedsChartData()" [labels]="callerNeedsLabels" [legend]="true">
+                    </canvas>
+                <div>
+                    <p>Housing : {{phonelogCallerNeeds["Housing"]}} </p>
+                    <p>Medical : {{phonelogCallerNeeds["Medical"]}} </p>
+                    <p>Legal : {{phonelogCallerNeeds["Legal"]}} </p>
+                    <p>Accompaniment : {{phonelogCallerNeeds["Accompaniment"]}} </p>
+                    <p>Financial : {{phonelogCallerNeeds["Financial"]}} </p>
+                    <p>Name Change : {{phonelogCallerNeeds["Name Change"]}} </p>
+                    <p>Food Security : {{phonelogCallerNeeds["Food Security"]}} </p>
+                    <p>Job Finding  : {{phonelogCallerNeeds["Job Finding"]}} </p>
+                    <p>Immigration : {{phonelogCallerNeeds["Immigration"]}} </p>
+                    <p>Victims of Violence : {{phonelogCallerNeeds["Victims of Violence"]}} </p>
+                    <p>Sexual Health : {{phonelogCallerNeeds["Sexual Health"]}} </p>
+                    <p>Information : {{phonelogCallerNeeds["Information"]}} </p>
+                    <p>TOTAL: {{phonelogCallerNeeds["Housing"]+phonelogCallerNeeds["Medical"]+phonelogCallerNeeds["Legal"]+phonelogCallerNeeds["Accompaniment"]
+                        +phonelogCallerNeeds["Financial"]+phonelogCallerNeeds["Name Change"]+phonelogCallerNeeds["Food Security"]+phonelogCallerNeeds["Job Finding"]
+                    +phonelogCallerNeeds["Immigration"]+phonelogCallerNeeds["Victims of Violence"]+phonelogCallerNeeds["Sexual Health"]+phonelogCallerNeeds["Information"]}}</p>
                 </div>
             </mat-card-content>
         </mat-card>
