--- a/angular-client/src/app/components/modals/errors-modal/errors-modal.component.html
+++ b/angular-client/src/app/components/modals/errors-modal/errors-modal.component.html
@@ -1,3 +1,5 @@
-<p>
-  errors-modal works!
-</p>
+<h1 mat-dialog-title>Error</h1>
+<div mat-dialog-content>{{data.message}}</div>
+<div mat-dialog-actions>
+  <button mat-button (click)="ok()" color="primary">OK</button>
+</div>
