--- a/angular-client/src/app/components/casefiles/case-modal/case-modal.component.html
+++ b/angular-client/src/app/components/casefiles/case-modal/case-modal.component.html
@@ -6,21 +6,8 @@
       <mat-option *ngFor="let type of resourceTypes" [value]="type">{{type}}</mat-option>
     </mat-select>
   </mat-form-field>
-  <p class="hint">Select urgency of request</p>
-  <mat-radio-group required [(ngModel)]="mycase.urgency" name="urgency" ng-checked="urgency[0]">
-    <mat-radio-button *ngFor="let urgency of urgencies" [value]="urgency">{{urgency}}&nbsp;&nbsp;</mat-radio-button>
-  </mat-radio-group>
-  <mat-form-field>
-    <input matInput placeholder="Enter any relevant notes here" value="" [(ngModel)]="mycase.notes" name="notes">
-  </mat-form-field>
-<div class="hint">Select the resources for this case</div>
-  <mat-form-field>
-    <mat-select multiple [(ngModel)]="mycase.contactedResources" name="contactedResources">
-        <span *ngFor="let resource of resources" >
-          <mat-option *ngIf="resource.kind === mycase.type" [value]="resource._id">{{resource.name}}</mat-option>
-        </span>
-    </mat-select>
-  </mat-form-field>
+  <app-case-generic *ngIf="mycase.type != 'Immigration'"></app-case-generic>
+  <app-case-immigration *ngIf="mycase.type == 'Immigration'"></app-case-immigration>
   <mat-dialog-actions>
       <button [disabled]="!caseForm.valid" mat-button (click)="submit()">Submit</button>
       <button mat-button (click)="cancel()">Cancel</button>
